--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
-  "name": "website",
+  "name": "thisisolya-website",
   "version": "0.1.0",
+  "homepage": "https://thisisolya.github.io/react-gh-pages",
   "private": true,
   "dependencies": {
     "@react-three/fiber": "^8.0.12",
@@ -13,6 +14,7 @@
     "@types/react-dom": "^18.0.0",
     "@types/styled-components": "^5.1.25",
     "@types/three": "^0.139.0",
+    "gh-pages": "^3.2.3",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-icons": "^4.3.1",
@@ -24,6 +26,8 @@
     "yarn": "^1.22.18"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
