build and delere readme

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "thisisolya-website",
   "version": "1.0.0",
-  "homepage": "https://thisisolya.github.io/react-gh-pages",
+  "homepage": "https://thisisolya.github.io/thisisolya.github.io",
   "private": true,
   "dependencies": {
     "@react-three/fiber": "^8.0.12",
@@ -14,7 +14,6 @@
     "@types/react-dom": "^18.0.0",
     "@types/styled-components": "^5.1.25",
     "@types/three": "^0.139.0",
-    "gh-pages": "^4.0.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-icons": "^4.3.1",
@@ -50,5 +49,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^6.1.1"
   }
 }
