--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "thisisolya-website",
   "version": "1.0.0",
-  "homepage": "https://thisisolya.github.io",
+  "homepage": ".",
   "private": true,
   "dependencies": {
     "@react-three/fiber": "^8.0.12",
@@ -14,9 +14,9 @@
     "@types/react-dom": "^18.0.0",
     "@types/styled-components": "^5.1.25",
     "@types/three": "^0.139.0",
-    "react": "^18.0.0",
+    "react": "^18.2.0",
     "react-dom": "^18.0.0",
-    "react-icons": "^4.3.1",
+    "react-feather": "^2.0.10",
     "react-scripts": "5.0.1",
     "styled-components": "^5.3.5",
     "three": "^0.139.2",
