--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.0.0",
     "react-feather": "^2.0.10",
+    "react-router-dom": "^6.22.2",
     "react-scripts": "5.0.1",
     "styled-components": "^5.3.5",
     "three": "^0.139.2",
