--- a/package.json
+++ b/package.json
@@ -14,9 +14,13 @@
     "@types/react-dom": "^18.0.0",
     "@types/styled-components": "^5.1.25",
     "@types/three": "^0.139.0",
+    "i18next": "^23.16.5",
+    "i18next-browser-languagedetector": "^8.0.0",
+    "i18next-http-backend": "^2.6.2",
     "react": "^18.2.0",
     "react-dom": "^18.0.0",
     "react-feather": "^2.0.10",
+    "react-i18next": "^15.1.1",
     "react-router-dom": "^6.22.2",
     "react-scripts": "5.0.1",
     "styled-components": "^5.3.5",
